# katharsis.com

./: .env  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  Dockerfile  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
backend/app/: build.gradle.kts  main.py
backend/app/core/: config.py
backend/app/src/main/java/team/emptyte/katharsis/: KatharsisApplication.java
backend/app/src/main/java/team/emptyte/katharsis/branch/application/: BranchService.java
backend/app/src/main/java/team/emptyte/katharsis/branch/application/mapper/: BranchMapper.java
backend/app/src/main/java/team/emptyte/katharsis/branch/infrastructure/api/: BranchController.java
backend/app/src/main/java/team/emptyte/katharsis/branch/infrastructure/sql/: SQLBranchAggregateRootRepository.java
backend/app/src/main/resources/: application.properties  application.yml
backend/app/src/main/resources/db/migration/: V1__init_schema.sql
backend/build-logic/: settings.gradle.kts
backend/build-logic/convention/: build.gradle.kts
backend/build-logic/convention/src/main/kotlin/: JvmLibraryConventionPlugin.kt  ProjectExtensions.kt  SpringApplicationConventionPlugin.kt  SpringBaseConventionPlugin.kt  SpringLibraryConventionPlugin.kt
backend/core/: build.gradle.kts
backend/core/src/main/java/team/emptyte/katharsis/branch/domain/: BranchAggregateRoot.java  BranchAggregateRootRepository.java
backend/core/src/main/java/team/emptyte/katharsis/user/domain/: UserAggregateRoot.java
backend/gradle/: init.gradle.kts  libs.versions.toml
frontend/: Dockerfile  (+4 more)
(+53 files in other folders)
